--- a/MyDocuments/css/style.css
+++ b/MyDocuments/css/style.css
@@ -14,346 +14,6 @@
   src: url("../fonts/PTSans_Narrow_Bold.woff2") format("woff2"), url("../fonts/PTSans_Narrow_Bold.woff") format("woff");
 }
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-body {
-  margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-  display: none;
-}
-
 *,
 *::before,
 *::after {
@@ -370,7 +30,7 @@ body {
   font-size: .875rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #343a40;
+  color: #000000;
   text-align: left;
   background-color: #f5f9fc;
 }
@@ -575,13 +235,9 @@ button {
 }
 
 .table thead tr th {
-  padding: 18px 4px;
+  padding: 18px 10px;
   border-bottom: 1px solid #848484;
   font-size: 18px;
-}
-
-.table thead tr th:last-child {
-  text-align: center;
 }
 
 .table thead tr th > * {
@@ -589,7 +245,8 @@ button {
 }
 
 .table thead tr th:last-child {
-  max-width: 100px;
+  position: relative;
+  padding-right: 30px;
 }
 
 .table tbody tr td {
@@ -599,6 +256,10 @@ button {
 }
 
 .table tbody tr td .date {
+  font-size: 12px;
+}
+
+.table tbody tr td .phone-number {
   font-size: 12px;
 }
 
@@ -619,26 +280,86 @@ button {
   display: block;
 }
 
+.wrapper-search {
+  display: -webkit-box;
+  display: flex;
+  position: relative;
+  padding: 5px 10px;
+  background-color: #4a4a4a;
+  border-radius: 10px;
+}
+
+.wrapper-search svg {
+  position: relative;
+  margin-left: 5px;
+  vertical-align: middle;
+  cursor: pointer;
+  fill: #0086ff;
+  z-index: 10;
+}
+
+.wrapper-search::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 45px;
+  border-radius: 0px 10px 10px 0px;
+  background-color: #4a4a4a;
+  z-index: 1;
+}
+
 .input-search {
-  width: 100%;
-  margin: 0 auto;
-  margin-bottom: 5px;
+  width: calc(100% - 40px);
   padding: 4px 2px;
   padding-left: 8px;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px 0px 0px 10px;
   font-size: 1rem;
   line-height: 2rem;
-  background-color: #f9f9f9;
+  box-shadow: inset 0px 0px 5px 1px #399fce;
 }
 
-.days {
-  font-size: 16px;
-  text-align: center;
+.cell-relat {
+  position: relative;
+  padding-right: 20px !important;
+}
+
+.cell-relat .days {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 38px;
+}
+
+.toggler-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20px;
+}
+
+.toggler-wrapper .toggler {
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  font-size: 0;
+  line-height: 0;
+  border: 10px solid transparent;
+  background-color: transparent;
+}
+
+.toggler-wrapper .top-tgl {
+  border-bottom: 15px solid #343a40;
+}
+
+.toggler-wrapper .bot-tgl {
+  border-top: 15px solid #343a40;
 }
 
 .blu {
-  color: #4a4ae7 !important;
+  color: #1c69b7 !important;
   font-weight: bold;
 }
 
@@ -652,6 +373,47 @@ button {
   font-weight: bold;
 }
 
+.bg-blu {
+  width: 120px;
+  border-radius: 10px;
+  background-color: #195a9c !important;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+.bg-grn {
+  width: 120px;
+  border-radius: 10px;
+  background-color: #1e781e !important;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+.bg-rd {
+  width: 120px;
+  border-radius: 10px;
+  background-color: #a11111 !important;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+/* ======= Colgroup =======*/
+.col {
+  width: 100%;
+}
+
+.number-col {
+  width: 100px;
+}
+
+.stage-col {
+  width: 130px;
+}
+
+/* ======= Colgroup =======*/
 .content-appeal {
   max-width: 960px;
   height: calc(100vh - 50px);
